<resources>
    <string name="app_name">Quản lý kho</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Type your username</string>
    <string name="prompt_password">Type your password</string>
    <string name="action_Login">Login</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="login_fpassword">Forgot password?</string>
    <string name="login_signup">Or Sign Up!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_home">Home</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="mahd">Mã HĐ</string>
    <string name="ncc">Nhà cung cấp</string>
    <string name="a3">Người lập</string>
    <string name="searchby">Tìm theo</string>
    <string name="mahd1">Mã HĐ:</string>
    <string name="ContractTitle">Hợp đồng</string>
    <string name="HT">Hoàn thành</string>
    <string name="CHT">Chưa hoàn thành</string>
    <string name="ExportTitle">PHIẾU XUẤT</string>
    <string name="MaonItem">Mã:</string>
    <string name="MaSP">Mã SP</string>
    <string name="TenSP">Tên SP</string>
    <string name="SortBy">Sắp xếp</string>
    <string name="statusTitle">Trạng thái</string>
    <string name="Role">Vai trò</string>
    <string name="settingBtn1">Chế độ tối</string>
    <string name="settingBtn2">Đăng xuất</string>
    <string-array name="sapxep">
        <item>Tăng dần</item>
        <item>Giảm dần</item>
    </string-array>
    <string-array name="role">
        <item>Tất cả</item>
        <item>Quản lý</item>
        <item>Nhân viên</item>
        <item>Cửa hàng</item>
        <item>Nhà cung cấp</item>
    </string-array>
</resources>