<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_blue_to_purple"
    android:padding="@dimen/padding_15dp"
   >

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_white_rad20"
        >
        <TextView
            android:id="@+id/title_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="Login"
            android:textColor="@color/black"
            android:textSize="@dimen/title_text_size"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"


            />

        <TextView
            android:id="@+id/tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:layout_marginStart="@dimen/margin_25dp"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:text="Username "
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_login" />

        <EditText
            android:id="@+id/username"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/edittext_padding"
            android:drawableLeft="@drawable/ic_outline_account_box_24"
            android:hint="@string/prompt_email"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/edittext_size"
            app:layout_constraintEnd_toEndOf="@id/tv1"
            app:layout_constraintStart_toStartOf="@id/tv1"
            app:layout_constraintTop_toBottomOf="@id/tv1" />

        <TextView
            android:id="@+id/tv2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/activity_horizontal_margin"
            android:text="Password "
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/username"
            app:layout_constraintStart_toStartOf="@id/username"
            app:layout_constraintTop_toBottomOf="@id/username" />

        <EditText
            android:id="@+id/password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:paddingStart="@dimen/edittext_padding"
            android:drawableLeft="@drawable/ic_outline_lock_24"
            android:imeActionLabel="@string/action_sign_in_short"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:selectAllOnFocus="true"
            android:textSize="@dimen/edittext_size"
            app:layout_constraintEnd_toEndOf="@id/tv2"
            app:layout_constraintStart_toStartOf="@id/tv2"
            app:layout_constraintTop_toBottomOf="@id/tv2" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_fpassword"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/password"
            app:layout_constraintTop_toBottomOf="@id/password"/>
        <Button
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/top_margin"
            android:text="@string/action_Login"

            android:textSize="@dimen/edittext_size"
            android:background="@drawable/button_bg_blue_ui"
            app:layout_constraintEnd_toEndOf="@+id/password"
            app:layout_constraintStart_toStartOf="@+id/password"
            app:layout_constraintTop_toBottomOf="@+id/password" />
        <TextView
            android:id="@+id/btn_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login_signup"
            android:textSize="@dimen/edittext_size"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_25dp"
            app:layout_constraintTop_toBottomOf="@id/login"
            app:layout_constraintStart_toStartOf="@id/login"
            app:layout_constraintEnd_toEndOf="@id/login"/>

    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>