<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_blue"
    tools:context=".Page.Contract.ContractActivity">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_filter"
        android:padding="@dimen/edittext_padding"
        android:text="@string/searchby"
        android:textSize="@dimen/item_button_text"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_filter"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/g1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <RadioButton
                android:id="@+id/a1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/radiobutton"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/mahd" />


            <RadioButton
                android:id="@+id/a2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/radiobutton"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/ncc" />

            <RadioButton

                android:id="@+id/a3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/radiobutton"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/a3" />

        </RadioGroup>
    </HorizontalScrollView>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_filter"
        android:padding="@dimen/edittext_padding"
        android:text="Trạng thái:"
        android:textColor="@color/black"
        android:textSize="@dimen/item_button_text"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView1" />


    <HorizontalScrollView
        android:id="@+id/horizontalScrollView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        app:layout_constraintStart_toEndOf="@+id/textView4"
        app:layout_constraintTop_toBottomOf="@id/horizontalScrollView">

        <RadioGroup
            android:id="@+id/g2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView">

            <RadioButton
                android:id="@+id/b1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/radiobutton"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/HT" />


            <RadioButton
                android:id="@+id/b2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:background="@drawable/radiobutton"
                android:button="@android:color/transparent"
                android:padding="5dp"
                android:text="@string/CHT" />


        </RadioGroup>
    </HorizontalScrollView>

    <android.support.v7.widget.AppCompatSpinner
        android:id="@+id/textinput"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/horizontalScrollView1"
        app:layout_constraintTop_toTopOf="@+id/horizontalScrollView1"
        >
    </android.support.v7.widget.AppCompatSpinner>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rec1"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_margin="@dimen/recview"

        app:layoutManager="android.support.v7.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView1" />
</android.support.constraint.ConstraintLayout>