<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.Product.ProductFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/ProductFragment_padding">

        <SearchView
            android:id="@+id/searchProduct"
            style="@style/Widget.AppCompat.SearchView.ActionBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/search_box"
            android:verticalScrollbarPosition="right"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_filter"
            android:background="@drawable/textbox_1"
            android:padding="@dimen/box_title_padding"
            android:text="@string/searchby"
            android:textSize="@dimen/sortby_tiltle_textsize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/horizontalScrollView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/horizontalScrollView" />


        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textbox_1"
            android:padding="@dimen/box_title_padding"
            android:text="@string/SortBy"
            android:textSize="@dimen/sortby_tiltle_textsize"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/textinput"
            app:layout_constraintStart_toStartOf="@+id/textView3"
            app:layout_constraintTop_toTopOf="@+id/textinput" />

        <HorizontalScrollView
            android:id="@+id/horizontalScrollView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_filter"
            app:layout_constraintStart_toEndOf="@+id/textView3"
            app:layout_constraintTop_toBottomOf="@id/searchProduct">

            <RadioGroup
                android:id="@+id/g1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:orientation="horizontal"
                app:layout_constraintStart_toStartOf="parent">

                <RadioButton
                    android:id="@+id/a1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/MaSP" />


                <RadioButton
                    android:id="@+id/a2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/TenSP" />

                <RadioButton

                    android:id="@+id/a3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/ncc" />

                <RadioButton

                    android:id="@+id/a4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/a3"
                    android:visibility="gone" />

                <RadioButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@drawable/radiobutton"
                    android:button="@android:color/transparent"
                    android:padding="5dp"
                    android:text="@string/a3"
                    android:visibility="invisible" />
            </RadioGroup>

        </HorizontalScrollView>

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/margin_10"
            android:padding="@dimen/PFPadding"
            app:cardCornerRadius="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView">

            <android.support.v7.widget.RecyclerView
                android:layout_width="match_parent"
                android:layout_height="0dp" />
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.AppCompatSpinner
            android:id="@+id/textinput"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/item_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/horizontalScrollView"></android.support.v7.widget.AppCompatSpinner>


    </android.support.constraint.ConstraintLayout>
</FrameLayout>